--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         <section class="contact" id="contact">
             <div class="container">
                 <h2>Get in Touch</h2>
-                <a href="mailto:me@waleeed.com" class="contact-email">
-                    me@waleeed.com
+                <a href="mailto:contact@waleeed.com" class="contact-email">
+                    contact@waleeed.com
                 </a>
             </div>
         </section>
